import { describe, expect, it } from 'vitest';
import {
  generateCSSTemplate,
  generateTestJavascriptTemplate,
  generateTestTypescriptTemplate,
  generateVueJavascriptTemplate,
  generateVueTypescriptTemplate,
} from '../../../scripts/generate-vue-templates.js';
import type { ComponentDefinition } from '../../../src/utils/registry.js';

const BUTTON_FIXTURE: ComponentDefinition = {
  name: 'Button',
  tagName: 'wa-button',
  category: 'Actions',
  description: 'Buttons represent actions that are available to the user',
  dependencies: [],
  files: {
    react: ['components/Button.tsx', 'types/button.d.ts'],
    vue: ['components/Button.vue'],
    angular: ['components/Button/button.component.ts'],
  },
  props: [
    {
      name: 'variant',
      type: 'string',
      values: ['neutral', 'brand', 'success', 'warning', 'danger'],
      default: 'neutral',
      description: 'Semantic variant of the button',
    },
    {
      name: 'appearance',
      type: 'string',
      values: ['accent', 'filled-outlined', 'filled', 'outlined', 'plain'],
      default: 'filled',
      description: 'Visual appearance style',
    },
    {
      name: 'size',
      type: 'string',
      values: ['small', 'medium', 'large'],
      default: 'medium',
      description: 'Button size',
    },
    {
      name: 'pill',
      type: 'boolean',
      default: 'false',
      description: 'Gives the button rounded edges',
    },
    {
      name: 'disabled',
      type: 'boolean',
      default: 'false',
      description: 'Disables the button',
    },
    {
      name: 'loading',
      type: 'boolean',
      default: 'false',
      description: 'Shows a loading indicator',
    },
    {
      name: 'with-caret',
      type: 'boolean',
      default: 'false',
      description: 'Adds a dropdown indicator caret',
      required: false,
    },
    {
      name: 'href',
      type: 'string',
      description: 'Makes the button work like a link',
      required: false,
    },
    {
      name: 'target',
      type: 'string',
      values: ['_blank', '_self', '_parent', '_top'],
      description: 'Link target (when href is set)',
      required: false,
    },
    {
      name: 'download',
      type: 'string',
      description: 'Download filename (when href is set)',
      required: false,
    },
    {
      name: 'rel',
      type: 'string',
      description: 'Link relationship (when href is set)',
      required: false,
    },
    {
      name: 'type',
      type: 'string',
      values: ['button', 'submit', 'reset'],
      default: 'button',
      description: "The button's type for form submission",
    },
    {
      name: 'name',
      type: 'string',
      description: 'The name of the button for form submission',
      required: false,
    },
    {
      name: 'value',
      type: 'string',
      description: 'The value of the button for form submission',
      required: false,
    },
    {
      name: 'formaction',
      type: 'string',
      description: "Override the form's action attribute",
      required: false,
    },
    {
      name: 'formenctype',
      type: 'string',
      description: "Override the form's enctype attribute",
      required: false,
    },
    {
      name: 'formmethod',
      type: 'string',
      description: "Override the form's method attribute",
      required: false,
    },
    {
      name: 'formnovalidate',
      type: 'boolean',
      default: 'false',
      description: 'Bypass form validation when this button submits',
    },
    {
      name: 'formtarget',
      type: 'string',
      description: "Override the form's target attribute",
      required: false,
    },
  ],
  importPath: '@awesome.me/webawesome/dist/components/button/button.js',
  tier: 'free',
};

const SWITCH_FIXTURE: ComponentDefinition = {
  name: 'Switch',
  tagName: 'wa-switch',
  category: 'Form Controls',
  description: 'Switches allow the user to toggle an option on or off',
  dependencies: [],
  files: {
    react: ['components/Switch.tsx', 'types/switch.d.ts'],
    angular: ['components/Switch/switch.component.ts'],
  },
  props: [
    {
      name: 'name',
      type: 'string',
      description: 'Form field name',
    },
    {
      name: 'value',
      type: 'string',
      description: 'Form value when checked',
    },
    {
      name: 'size',
      type: 'string',
      values: ['small', 'medium', 'large'],
      default: 'medium',
      description: 'Switch size',
    },
    {
      name: 'disabled',
      type: 'boolean',
      default: 'false',
      description: 'Disables the switch',
    },
    {
      name: 'checked',
      type: 'boolean',
      default: 'false',
      description: 'Whether the switch is on',
    },
    {
      name: 'required',
      type: 'boolean',
      default: 'false',
      description: 'Makes the switch required',
    },
    {
      name: 'hint',
      type: 'string',
      default: "''",
      description: 'Hint text',
    },
  ],
  importPath: '@awesome.me/webawesome/dist/components/switch/switch.js',
  tier: 'free',
};

const BADGE_FIXTURE: ComponentDefinition = {
  name: 'Badge',
  tagName: 'wa-badge',
  category: 'Display',
  description:
    'Badges are used to draw attention and display statuses or counts',
  dependencies: [],
  files: {
    react: ['components/Badge.tsx', 'types/badge.d.ts'],
    angular: ['components/Badge/badge.component.ts'],
  },
  props: [
    {
      name: 'variant',
      type: 'string',
      values: ['brand', 'neutral', 'success', 'warning', 'danger'],
      default: 'brand',
      description: "The badge's theme variant",
    },
    {
      name: 'appearance',
      type: 'string',
      values: ['accent', 'filled', 'outlined', 'filled-outlined'],
      default: 'accent',
      description: "The badge's visual appearance",
    },
    {
      name: 'pill',
      type: 'boolean',
      default: 'false',
      description: 'Draws a pill-style badge with rounded edges',
    },
    {
      name: 'attention',
      type: 'string',
      values: ['none', 'pulse', 'bounce'],
      default: 'none',
      description: 'Adds an animation to draw attention to the badge',
    },
  ],
  importPath: '@awesome.me/webawesome/dist/components/badge/badge.js',
  tier: 'free',
};

// Markdown fixture exercises the REMOVED_IMPERATIVE_METHODS branch in
// buildJsdocBlock — its getMarked()/updateAll() methods are marked
// private in WA 3.5.0+, so the Vue wrapper carries an @remarks JSDoc
// note explaining the replacement pattern.
const MARKDOWN_FIXTURE: ComponentDefinition = {
  name: 'Markdown',
  tagName: 'wa-markdown',
  category: 'Display',
  description: 'Renders markdown content in plain HTML',
  dependencies: [],
  files: {
    react: ['components/Markdown.tsx', 'types/markdown.d.ts'],
    vue: ['components/Markdown.vue'],
    angular: ['components/Markdown/markdown.component.ts'],
  },
  props: [
    {
      name: 'tab-size',
      type: 'number',
      default: '4',
      description: 'Tab stop width for whitespace normalization',
    },
  ],
  importPath: '@awesome.me/webawesome/dist/components/markdown/markdown.js',
  tier: 'free',
};

describe('generateVueTypescriptTemplate', () => {
  it('emits the Button wrapper', () => {
    expect(generateVueTypescriptTemplate(BUTTON_FIXTURE)).toMatchSnapshot();
  });

  it('emits the Badge wrapper (no events, no methods branch)', () => {
    expect(generateVueTypescriptTemplate(BADGE_FIXTURE)).toMatchSnapshot();
  });

  it('emits the Switch wrapper (checked v-model branch)', () => {
    expect(generateVueTypescriptTemplate(SWITCH_FIXTURE)).toMatchSnapshot();
  });

  it('emits the Markdown wrapper with the @remarks JSDoc for removed imperative methods', () => {
    expect(generateVueTypescriptTemplate(MARKDOWN_FIXTURE)).toMatchSnapshot();
  });
});

describe('generateVueJavascriptTemplate', () => {
  it('emits the Button JS wrapper', () => {
    expect(generateVueJavascriptTemplate(BUTTON_FIXTURE)).toMatchSnapshot();
  });

  it('emits the Badge JS wrapper (no events, no methods branch)', () => {
    expect(generateVueJavascriptTemplate(BADGE_FIXTURE)).toMatchSnapshot();
  });

  it('emits the Switch JS wrapper (checked v-model branch)', () => {
    expect(generateVueJavascriptTemplate(SWITCH_FIXTURE)).toMatchSnapshot();
  });

  it('emits the Markdown JS wrapper with the @remarks JSDoc for removed imperative methods', () => {
    expect(generateVueJavascriptTemplate(MARKDOWN_FIXTURE)).toMatchSnapshot();
  });
});

describe('generateCSSTemplate', () => {
  it('emits the Button CSS template', () => {
    expect(generateCSSTemplate('Button')).toMatchSnapshot();
  });
});

describe('generateTestTypescriptTemplate', () => {
  it('emits the Button TS test stub', () => {
    expect(
      generateTestTypescriptTemplate('Button', 'wa-button')
    ).toMatchSnapshot();
  });
});

describe('generateTestJavascriptTemplate', () => {
  it('emits the Button JS test stub', () => {
    expect(
      generateTestJavascriptTemplate('Button', 'wa-button')
    ).toMatchSnapshot();
  });
});
